# rusync

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  conanfile.txt  dox-conf
client/: CMakeLists.txt
client/src/: BinaryParser.hpp  Config.hpp  INotify.hpp  ServerAPI.cpp  ServerAPI.hpp  SyncApp.cpp  SyncApp.hpp  Thread.cpp  Thread.hpp  Worker.cpp  Worker.hpp  WorkerPool.hpp  main.cpp
client/tests/: BinaryParserTests.cpp  CMakeLists.txt  UtilTests.cpp
common/: DirEntry.cpp  DirEntry.hpp  FileChunk.hpp  Utils.hpp
docs/html/: BinaryParser_8hpp.html  BinaryParser_8hpp__dep__incl.map  BinaryParser_8hpp__dep__incl.md5  BinaryParser_8hpp__incl.map  BinaryParser_8hpp__incl.md5  BinaryParser_8hpp_source.html  BinaryWriter_8hpp.html  BinaryWriter_8hpp__dep__incl.map  BinaryWriter_8hpp__dep__incl.md5  BinaryWriter_8hpp__incl.map  BinaryWriter_8hpp__incl.md5  BinaryWriter_8hpp_source.html  DirEntry_8cpp.html  DirEntry_8cpp__incl.map  DirEntry_8cpp__incl.md5  DirEntry_8hpp.html  DirEntry_8hpp__dep__incl.map  DirEntry_8hpp__dep__incl.md5  DirEntry_8hpp__incl.map  DirEntry_8hpp__incl.md5  DirEntry_8hpp_source.html  FileChunk_8hpp.html  FileChunk_8hpp__dep__incl.map  FileChunk_8hpp__dep__incl.md5  FileChunk_8hpp__incl.map  FileChunk_8hpp__incl.md5  FileChunk_8hpp_source.html  INotify_8hpp.html  INotify_8hpp__dep__incl.map  INotify_8hpp__dep__incl.md5  INotify_8hpp__incl.map  INotify_8hpp__incl.md5  INotify_8hpp_source.html  ServerAPI_8cpp.html  ServerAPI_8cpp__incl.map  ServerAPI_8cpp__incl.md5  ServerAPI_8hpp.html  ServerAPI_8hpp__dep__incl.map  ServerAPI_8hpp__dep__incl.md5  ServerAPI_8hpp__incl.map  (+153 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  (+40 more)
docs/latex/: BinaryParser_8hpp.tex  BinaryParser_8hpp__dep__incl.md5  BinaryParser_8hpp__incl.md5  BinaryWriter_8hpp.tex  BinaryWriter_8hpp__dep__incl.md5  BinaryWriter_8hpp__incl.md5  DirEntry_8cpp.tex  DirEntry_8cpp__incl.md5  DirEntry_8hpp.tex  DirEntry_8hpp__dep__incl.md5  DirEntry_8hpp__incl.md5  FileChunk_8hpp.tex  FileChunk_8hpp__dep__incl.md5  FileChunk_8hpp__incl.md5  INotify_8hpp.tex  INotify_8hpp__dep__incl.md5  INotify_8hpp__incl.md5  ServerAPI_8cpp.tex  ServerAPI_8cpp__incl.md5  ServerAPI_8hpp.tex  ServerAPI_8hpp__dep__incl.md5  ServerAPI_8hpp__incl.md5  ServerSync_8cpp.tex  ServerSync_8cpp__incl.md5  ServerSync_8hpp.tex  ServerSync_8hpp__dep__incl.md5  ServerSync_8hpp__incl.md5  SyncApp_8cpp.tex  SyncApp_8cpp__incl.md5  SyncApp_8hpp.tex  SyncApp_8hpp__dep__incl.md5  SyncApp_8hpp__incl.md5  Thread_8cpp.tex  Thread_8cpp__incl.md5  Thread_8hpp.tex  Thread_8hpp__dep__incl.md5  Thread_8hpp__incl.md5  Utils_8hpp.tex  Utils_8hpp__dep__incl.md5  Utils_8hpp__incl.md5  (+45 more)
integration_tests/: intergration_tests.py  test_homework.py
server/: CMakeLists.txt
server/src/: BinaryWriter.hpp  Config.hpp  ServerSync.cpp  ServerSync.hpp  main.cpp
server/tests/: BinaryWriterTests.cpp  CMakeLists.txt
